# icy_browser

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: basic_browser.rs  custom_widgets.rs  keyboard_driven.rs
src/: browser_engine.rs  browser_engines.rs  browser_widgets.rs  helpers.rs  lib.rs  main.rs  shortcut.rs  ui.rs  widgets.rs
src/engines/: mod.rs  ultralight.rs
src/widgets/: bookmark_bar.rs  browser_view.rs  browser_widgets.rs  command_palatte.rs  command_palette.rs  command_window.rs  hover_text_input.rs  mod.rs  nav_bar.rs  overlay.rs  tab_bar.rs
src/widgets/command_window/: categorical_list.rs  categorical_selection_list.rs  results.rs
