[package]
name = "icy_browser"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
description = "iced browser widgets"
repository = "https://github.com/LegitCamper/rust-browser"

[profile.release]
strip = "debuginfo"
panic = "abort"
incremental = true

[profile.release-lto]
codegen-units = 1
inherits = "release"
opt-level = 3
lto = "fat"

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[build]
rustflags = ["-Z", "threads=8"]

[features]
default = ["webkit"]
webkit = ["ultralight"]
ultralight = ["ul-next"]

# [patch.crates-io]
# iced = { git = "https://github.com/iced-rs/iced", rev = "6734d183594ebf89b8e6c030ea69d53ecb6b72db" }
# iced_core = { git = "https://github.com/iced-rs/iced", rev = "6734d183594ebf89b8e6c030ea69d53ecb6b72db" }

[dependencies]
env_home = "0.1.0"
iced = { version = "0.12.*", features = ["advanced", "image", "tokio", "lazy"]}
iced_aw = { version = "0.9.3", features = ["tab_bar", "icons"] }
iced_on_focus_widget = "0.1.0"
rand = "0.8.5"
reqwest = "0.12.5"
serde = "1.0.207"
serde_json = "1.0.124"
smol_str = "0.2.2"
tempfile = "3.12.0"
ul-next = { version = "0.2.0", optional = true }
url = "2.5.2"

